welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: reassignment to val
			a = num(i)
                          ^island:8: error: reassignment to val
			r = r+1
                          ^island:4: error: type mismatch;
 found   : Unit
 required: Int
	for(i <- 0 to num.length - 1){
              ^