welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	def r = 0
	def a = 0
	for(i <- 0 to num.length - 1){
		if(num(i) != a){
			if( a==0){
			a = num(i)
			r = r+1
			}
			}	
	}
}
